--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.2",
     "ssh2": "^1.14.0",
     "tailwindcss": "^3.3.3"
   },
